demo: arduino uno r4 config fix

--- a/demo/arduino-uno_r4/.config
+++ b/demo/arduino-uno_r4/.config
@@ -21,6 +21,7 @@ CONFIG_ARMV7EM=y
 # CONFIG_MACH_ATSAME5X is not set
 # CONFIG_MACH_STM32H7XX is not set
 CONFIG_MACH_RENESAS_RA4=y
+# CONFIG_MACH_STM32F401X is not set
 CONFIG_FPV4_SP_D16=y
 # CONFIG_FPV5_SP_D16 is not set
 CONFIG_L1_CACHE_LINESIZE=4
@@ -192,6 +193,8 @@ CONFIG_STAGING=y
 #
 # Clock drivers
 #
+# CONFIG_CLOCK_STM32F10XXX is not set
+# CONFIG_CLOCK_STM32F401X is not set
 
 #
 # DMA drivers
@@ -209,6 +212,7 @@ CONFIG_STAGING=y
 #
 # GPIO drivers
 #
+# CONFIG_GPIO_STM32F10XXX is not set
 
 #
 # LIN drivers
@@ -221,6 +225,7 @@ CONFIG_STAGING=y
 #
 # MUX drivers
 #
+# CONFIG_MUX_STM32F10XXX is not set
 
 #
 # PWM drivers
