--- a/staging/drivers/clock/Kconfig
+++ b/staging/drivers/clock/Kconfig
@@ -12,4 +12,8 @@ config CLOCK_STM32F401X
        depends on ARM
        bool "STMicro STM32F401x series clock"
 
+config CLOCK_STM32L4X
+       depends on ARM
+       bool "STMicro STM32L4x series clock"
+
 endmenu
