--- a/staging/drivers/gpio/Kconfig
+++ b/staging/drivers/gpio/Kconfig
@@ -1,5 +1,9 @@
 menu "GPIO drivers"
 
+config GPIO_8051
+       depends on 8051
+       bool "8051-compatible GPIOs"
+
 config GPIO_N76E003
        depends on 8051
        bool "Nuvoton N76E003 series GPIOs"
