--- a/staging/drivers/mux/Kconfig
+++ b/staging/drivers/mux/Kconfig
@@ -1,5 +1,9 @@
 menu "MUX drivers"
 
+config MUX_8051
+       depends on 8051
+       bool "8051-compatible MUX"
+
 config MUX_N76E003
        depends on 8051
        bool "Nuvoton N76E003 series MUX"
