--- a/staging/drivers/uart/Kconfig
+++ b/staging/drivers/uart/Kconfig
@@ -4,4 +4,12 @@ config UART_N76E003
        depends on 8051
        bool "Nuvoton N76E003 series UART"
 
+config UART_8051
+       depends on 8051
+       bool "8051-compatible UART"
+
+config UART_8051_IRQDRIVEN
+       depends on UART_8051
+       bool "Support for IRQ-driven options"
+
 endmenu
