--- a/staging/drivers/clock/Makefile
+++ b/staging/drivers/clock/Makefile
@@ -7,3 +7,4 @@ c_src-$(CONFIG_CLOCK_LGT8FX8P) += $(staging-drivers-clock)/clock-lgt8fx8p.c
 c_src-$(CONFIG_CLOCK_STM32F10XXX) += $(staging-drivers-clock)/clock-stm32f10xxx.c
 c_src-$(CONFIG_CLOCK_STM32F401X) += $(staging-drivers-clock)/clock-stm32f401x.c
 c_src-$(CONFIG_CLOCK_STM32L4X) += $(staging-drivers-clock)/clock-stm32l4x.c
+c_src-$(CONFIG_CLOCK_STC12C5AXX) += $(staging-drivers-clock)/clock-stc12c5axx.c
