--- a/staging/drivers/clock/Makefile
+++ b/staging/drivers/clock/Makefile
@@ -8,3 +8,4 @@ c_src-$(CONFIG_CLOCK_STM32F10XXX) += $(staging-drivers-clock)/clock-stm32f10xxx.
 c_src-$(CONFIG_CLOCK_STM32F401X) += $(staging-drivers-clock)/clock-stm32f401x.c
 c_src-$(CONFIG_CLOCK_STM32L4X) += $(staging-drivers-clock)/clock-stm32l4x.c
 c_src-$(CONFIG_CLOCK_STC12C5AXX) += $(staging-drivers-clock)/clock-stc12c5axx.c
+c_src-$(CONFIG_CLOCK_CH32V003) += $(staging-drivers-clock)/clock-ch32v003.c
