--- a/staging/drivers/gpio/Makefile
+++ b/staging/drivers/gpio/Makefile
@@ -6,3 +6,4 @@ staging-drivers-gpio := $(srctree)/staging/drivers/gpio
 c_src-$(CONFIG_GPIO_8051) += $(staging-drivers-gpio)/gpio-8051.c
 c_src-$(CONFIG_GPIO_N76E003) += $(staging-drivers-gpio)/gpio-n76e003.c
 c_src-$(CONFIG_GPIO_STM32F10XXX) += $(staging-drivers-gpio)/gpio-stm32f10xxx.c
+c_src-$(CONFIG_GPIO_WCH_CH32X) += $(staging-drivers-gpio)/gpio-wch_ch32x.c
