--- a/staging/drivers/mux/Kconfig
+++ b/staging/drivers/mux/Kconfig
@@ -12,4 +12,8 @@ config MUX_STM32F10XXX
        depends on ARM
        bool "STMicro STM32F10XXX series MUX"
 
+config MUX_WCH_CH32X
+       depends on RISCV
+       bool "WCH CH32x series MUX"
+
 endmenu
