demo: updated .config in arduino-uno_r4

--- a/demo/arduino-uno_r4/.config
+++ b/demo/arduino-uno_r4/.config
@@ -22,6 +22,7 @@ CONFIG_ARMV7EM=y
 # CONFIG_MACH_STM32H7XX is not set
 CONFIG_MACH_RENESAS_RA4=y
 # CONFIG_MACH_STM32F401X is not set
+# CONFIG_MACH_STM32L4X is not set
 CONFIG_FPV4_SP_D16=y
 # CONFIG_FPV5_SP_D16 is not set
 CONFIG_L1_CACHE_LINESIZE=4
@@ -195,6 +196,7 @@ CONFIG_STAGING=y
 #
 # CONFIG_CLOCK_STM32F10XXX is not set
 # CONFIG_CLOCK_STM32F401X is not set
+# CONFIG_CLOCK_STM32L4X is not set
 
 #
 # DMA drivers
