--- a/staging/drivers/clock/Makefile
+++ b/staging/drivers/clock/Makefile
@@ -9,3 +9,4 @@ c_src-$(CONFIG_CLOCK_STM32F401X) += $(staging-drivers-clock)/clock-stm32f401x.c
 c_src-$(CONFIG_CLOCK_STM32L4X) += $(staging-drivers-clock)/clock-stm32l4x.c
 c_src-$(CONFIG_CLOCK_STC12C5AXX) += $(staging-drivers-clock)/clock-stc12c5axx.c
 c_src-$(CONFIG_CLOCK_CH32V003) += $(staging-drivers-clock)/clock-ch32v003.c
+c_src-$(CONFIG_CLOCK_MC9S08PTXX) += $(staging-drivers-clock)/clock-mc9s08ptxx.c
