--- a/staging/drivers/mux/Kconfig
+++ b/staging/drivers/mux/Kconfig
@@ -16,4 +16,8 @@ config MUX_WCH_CH32X
        depends on RISCV
        bool "WCH CH32x series MUX"
 
+config MUX_MC9S08PTXX
+       depends on HCS08
+       bool "NXP MC9S08PTxx series MUX"
+
 endmenu
