--- a/staging/drivers/mux/Makefile
+++ b/staging/drivers/mux/Makefile
@@ -7,3 +7,4 @@ c_src-$(CONFIG_MUX_8051) += $(staging-drivers-mux)/mux-8051.c
 c_src-$(CONFIG_MUX_N76E003) += $(staging-drivers-mux)/mux-n76e003.c
 c_src-$(CONFIG_MUX_STM32F10XXX) += $(staging-drivers-mux)/mux-stm32f10xxx.c
 c_src-$(CONFIG_MUX_WCH_CH32X) += $(staging-drivers-mux)/mux-wch_ch32x.c
+c_src-$(CONFIG_MUX_MC9S08PTXX) += $(staging-drivers-mux)/mux-mc9s08ptxx.c
