--- a/staging/drivers/wd/Makefile
+++ b/staging/drivers/wd/Makefile
@@ -4,3 +4,4 @@
 staging-drivers-wd := $(srctree)/staging/drivers/wd
 
 c_src-$(CONFIG_WD_RENESAS_RA4_WDT) += $(staging-drivers-wd)/wd-renesas_ra4_wdt.c
+c_src-$(CONFIG_WD_MC9S08PTXX_WDOG) += $(staging-drivers-wd)/wd-mc9s08ptxx.c
