--- a/staging/demo/devebox-stc-c51/.config
+++ b/staging/demo/devebox-stc-c51/.config
@@ -6,6 +6,7 @@ CONFIG_8051=y
 # CONFIG_ARM is not set
 # CONFIG_AVR is not set
 # CONFIG_C2000 is not set
+# CONFIG_HCS08 is not set
 # CONFIG_MIPS is not set
 # CONFIG_POWERPC is not set
 # CONFIG_RISCV is not set
@@ -190,3 +191,7 @@ CONFIG_MUX_8051=y
 # CONFIG_UART_N76E003 is not set
 CONFIG_UART_8051=y
 CONFIG_UART_8051_IRQDRIVEN=y
+
+#
+# Watchdog drivers
+#
