--- a/staging/demo/n76e003/.config
+++ b/staging/demo/n76e003/.config
@@ -6,6 +6,7 @@ CONFIG_8051=y
 # CONFIG_ARM is not set
 # CONFIG_AVR is not set
 # CONFIG_C2000 is not set
+# CONFIG_HCS08 is not set
 # CONFIG_MIPS is not set
 # CONFIG_POWERPC is not set
 # CONFIG_RISCV is not set
@@ -18,6 +19,7 @@ CONFIG_8051=y
 # CONFIG_MACH_UCSIM51 is not set
 CONFIG_MACH_N76E003=y
 # CONFIG_MACH_CY7C6801xA is not set
+# CONFIG_MACH_STC12C5AXX is not set
 # CONFIG_N76E003_TIMER_T2 is not set
 CONFIG_N76E003_TIMER_WKT=y
 
@@ -137,6 +139,7 @@ CONFIG_STAGING=y
 #
 # Clock drivers
 #
+# CONFIG_CLOCK_STC12C5AXX is not set
 
 #
 # DMA drivers
@@ -153,6 +156,7 @@ CONFIG_STAGING=y
 #
 # GPIO drivers
 #
+# CONFIG_GPIO_8051 is not set
 CONFIG_GPIO_N76E003=y
 
 #
@@ -166,6 +170,7 @@ CONFIG_GPIO_N76E003=y
 #
 # MUX drivers
 #
+# CONFIG_MUX_8051 is not set
 CONFIG_MUX_N76E003=y
 
 #
@@ -184,3 +189,8 @@ CONFIG_MUX_N76E003=y
 # UART drivers
 #
 CONFIG_UART_N76E003=y
+# CONFIG_UART_8051 is not set
+
+#
+# Watchdog drivers
+#
