--- a/staging/demo/ucsim_51/.config
+++ b/staging/demo/ucsim_51/.config
@@ -6,6 +6,7 @@ CONFIG_8051=y
 # CONFIG_ARM is not set
 # CONFIG_AVR is not set
 # CONFIG_C2000 is not set
+# CONFIG_HCS08 is not set
 # CONFIG_MIPS is not set
 # CONFIG_POWERPC is not set
 # CONFIG_RISCV is not set
@@ -18,6 +19,7 @@ CONFIG_8051=y
 CONFIG_MACH_UCSIM51=y
 # CONFIG_MACH_N76E003 is not set
 # CONFIG_MACH_CY7C6801xA is not set
+# CONFIG_MACH_STC12C5AXX is not set
 
 #
 # Scheduler options
