--- a/staging/demo/ucsim_51/Makefile
+++ b/staging/demo/ucsim_51/Makefile
@@ -33,8 +33,6 @@ local-y := $(patsubst %,./debug/%, \
 	     $(notdir $(a_src-y) $(c_src-y)))
 
 # more included files to add to debug
-a_dep-y := $(patsubst %/startup.S, %/picoRTOS_device.inc, \
-            $(filter %/startup.S,$(a_src-y)))
 a_dep-y += $(patsubst -I%/include, %/include/macros.S, \
             $(filter %/include,$(asflags-y)))
 
@@ -44,7 +42,7 @@ $(local-y): $(a_src-y) $(a_dep-y) $(c_src-y)
 $(debug): $(local-y)
 	mkdir -p $(dir $@)/generated
 	cp -f Makefile.debug $(dir $@)/Makefile
-	cp -f $(dir $@)/autoconf.h $(dir $@)/generated
+	cp -fr include/* $(dir $@)
 	rm -f $(dir $@)/autoconf.h
 	make -C $(dir $@)
 
