spi: support for NXP MC9S08PTxx series (staging)

--- a/staging/drivers/spi/Makefile
+++ b/staging/drivers/spi/Makefile
@@ -2,3 +2,5 @@
 # Staging spi drivers
 #
 staging-drivers-spi := $(srctree)/staging/drivers/spi
+
+c_src-$(CONFIG_SPI_MC9S08PTXX) += $(staging-drivers-spi)/spi-mc9s08ptxx.c
