uart: support for NXP MC9S08PTxx SCI UART (staging)

--- a/staging/drivers/uart/Makefile
+++ b/staging/drivers/uart/Makefile
@@ -5,3 +5,4 @@ staging-drivers-uart := $(srctree)/staging/drivers/uart
 
 c_src-$(CONFIG_UART_N76E003) += $(staging-drivers-uart)/uart-n76e003.c
 c_src-$(CONFIG_UART_8051) += $(staging-drivers-uart)/uart-8051$(CONFIG_UART_8051_IRQDRIVEN:y=_irqdriven).c
+c_src-$(CONFIG_UART_MC9S08PTXX) += $(staging-drivers-uart)/uart-mc9s08ptxx_sci.c
