--- a/staging/drivers/uart/Kconfig
+++ b/staging/drivers/uart/Kconfig
@@ -12,4 +12,8 @@ config UART_8051_IRQDRIVEN
        depends on UART_8051
        bool "Support for IRQ-driven options"
 
+config UART_MC9S08PTXX
+       depends on HCS08
+       bool "NXP MC9S08PTxx series SCI UART"
+
 endmenu
