pwm: support for NXP MC9S08PTxx FTM (staging)

--- a/staging/drivers/pwm/Makefile
+++ b/staging/drivers/pwm/Makefile
@@ -2,3 +2,5 @@
 # Staging pwm drivers
 #
 staging-drivers-pwm := $(srctree)/staging/drivers/pwm
+
+c_src-$(CONFIG_PWM_MC9S08PTXX_FTM) += $(staging-drivers-pwm)/pwm-mc9s08ptxx_ftm.c
