--- a/staging/drivers/pwm/Kconfig
+++ b/staging/drivers/pwm/Kconfig
@@ -1,3 +1,7 @@
 menu "PWM drivers"
 
+config PWM_MC9S08PTXX_FTM
+       depends on HCS08
+       bool "NXP MC9S08PTxx FTM series PWMs"
+       
 endmenu
