--- a/staging/drivers/adc/Makefile
+++ b/staging/drivers/adc/Makefile
@@ -5,3 +5,4 @@ staging-drivers-adc := $(srctree)/staging/drivers/adc
 
 c_src-$(CONFIG_ADC_GD32VF103) += $(staging-drivers-adc)/adc-gd32vf103.c
 c_src-$(CONFIG_ADC_NXP_EQADC) += $(staging-drivers-adc)/adc-nxp_eqadc.c
+c_src-$(CONFIG_ADC_MC9S08PTXX) += $(staging-drivers-adc)/adc-mc9s08ptxx.c
