--- a/demo/arduino-uno/.config
+++ b/demo/arduino-uno/.config
@@ -6,11 +6,14 @@
 # CONFIG_ARM is not set
 CONFIG_AVR=y
 # CONFIG_C2000 is not set
+# CONFIG_HCS08 is not set
 # CONFIG_MIPS is not set
 # CONFIG_POWERPC is not set
 # CONFIG_RISCV is not set
 # CONFIG_PTHREAD is not set
 # CONFIG_WIN32 is not set
+CONFIG_CC="gcc"
+CONFIG_SYSCLK_HZ=16000000
 
 #
 # AVR8 architecture
@@ -23,7 +26,6 @@ CONFIG_MACH_ATMEGA328P=y
 # CONFIG_MACH_ATTINY817 is not set
 # CONFIG_MACH_ATTINY1607 is not set
 # CONFIG_MACH_LGT8FX8P is not set
-CONFIG_SYSCLK_HZ=16000000
 
 #
 # Scheduler options
