--- a/staging/drivers/twi/Kconfig
+++ b/staging/drivers/twi/Kconfig
@@ -16,4 +16,8 @@ config TWI_RENESAS_RA4
        depends on ARM
        bool "Renesas RA4 series TWI"
 
+config TWI_MC9S08PTXX
+       depends on HCS08
+       bool "NXP MC9S08PTxx series TWI/I2C"
+
 endmenu
