--- a/demo/arduino-uno_r4/.config
+++ b/demo/arduino-uno_r4/.config
@@ -6,11 +6,13 @@
 CONFIG_ARM=y
 # CONFIG_AVR is not set
 # CONFIG_C2000 is not set
+# CONFIG_HCS08 is not set
 # CONFIG_MIPS is not set
 # CONFIG_POWERPC is not set
 # CONFIG_RISCV is not set
 # CONFIG_PTHREAD is not set
 # CONFIG_WIN32 is not set
+CONFIG_CC="gcc"
 
 #
 # ARM architecture
@@ -246,3 +248,8 @@ CONFIG_TWI_RENESAS_RA4=y
 #
 # UART drivers
 #
+
+#
+# Watchdog drivers
+#
+# CONFIG_WD_RENESAS_RA4_WDT is not set
