--- a/demo/win32/.config
+++ b/demo/win32/.config
@@ -6,11 +6,13 @@
 # CONFIG_ARM is not set
 # CONFIG_AVR is not set
 # CONFIG_C2000 is not set
+# CONFIG_HCS08 is not set
 # CONFIG_MIPS is not set
 # CONFIG_POWERPC is not set
 # CONFIG_RISCV is not set
 # CONFIG_PTHREAD is not set
 CONFIG_WIN32=y
+CONFIG_CC="gcc"
 
 #
 # Scheduler options
