demo: 8051-related demo updates

--- a/staging/demo/ucsim_51/.config
+++ b/staging/demo/ucsim_51/.config
@@ -10,8 +10,10 @@ CONFIG_8051=y
 # CONFIG_MIPS is not set
 # CONFIG_POWERPC is not set
 # CONFIG_RISCV is not set
+# CONFIG_STM8 is not set
 # CONFIG_PTHREAD is not set
 # CONFIG_WIN32 is not set
+CONFIG_CC="sdcc"
 
 #
 # 8051 architecture
