--- a/staging/demo/devebox-stc-c51/.config
+++ b/staging/demo/devebox-stc-c51/.config
@@ -12,6 +12,7 @@ CONFIG_8051=y
 # CONFIG_RISCV is not set
 # CONFIG_PTHREAD is not set
 # CONFIG_WIN32 is not set
+CONFIG_CC="sdcc"
 
 #
 # 8051 architecture
@@ -57,8 +58,8 @@ CONFIG_EXTRA_LDFLAGS=""
 # Inter-Process communications
 #
 # CONFIG_FUTEX is not set
-# CONFIG_MUTEX is not set
-# CONFIG_COND is not set
+CONFIG_MUTEX=y
+CONFIG_COND=y
 # CONFIG_QUEUE is not set
 
 #
