--- a/staging/demo/ez-usb-fx2/.config
+++ b/staging/demo/ez-usb-fx2/.config
@@ -6,11 +6,13 @@ CONFIG_8051=y
 # CONFIG_ARM is not set
 # CONFIG_AVR is not set
 # CONFIG_C2000 is not set
+# CONFIG_HCS08 is not set
 # CONFIG_MIPS is not set
 # CONFIG_POWERPC is not set
 # CONFIG_RISCV is not set
 # CONFIG_PTHREAD is not set
 # CONFIG_WIN32 is not set
+CONFIG_CC="sdcc"
 
 #
 # 8051 architecture
@@ -18,6 +20,7 @@ CONFIG_8051=y
 # CONFIG_MACH_UCSIM51 is not set
 # CONFIG_MACH_N76E003 is not set
 CONFIG_MACH_CY7C6801xA=y
+# CONFIG_MACH_STC12C5AXX is not set
 CONFIG_XDATA_SIZE=2048
 
 #
@@ -73,6 +76,8 @@ CONFIG_COND=y
 #
 # Clock drivers
 #
+# CONFIG_CLOCK_N76E003 is not set
+CONFIG_CLOCK_CY7C6801XA=y
 
 #
 # DMA drivers
@@ -134,8 +139,7 @@ CONFIG_STAGING=y
 #
 # Clock drivers
 #
-# CONFIG_CLOCK_N76E003 is not set
-CONFIG_CLOCK_CY7C6801XA=y
+# CONFIG_CLOCK_STC12C5AXX is not set
 
 #
 # DMA drivers
@@ -152,6 +156,8 @@ CONFIG_CLOCK_CY7C6801XA=y
 #
 # GPIO drivers
 #
+# CONFIG_GPIO_8051 is not set
+# CONFIG_GPIO_N76E003 is not set
 
 #
 # LIN drivers
@@ -164,6 +170,8 @@ CONFIG_CLOCK_CY7C6801XA=y
 #
 # MUX drivers
 #
+# CONFIG_MUX_8051 is not set
+# CONFIG_MUX_N76E003 is not set
 
 #
 # PWM drivers
@@ -179,4 +187,10 @@ CONFIG_CLOCK_CY7C6801XA=y
 
 #
 # UART drivers
+#
+# CONFIG_UART_N76E003 is not set
+# CONFIG_UART_8051 is not set
+
+#
+# Watchdog drivers
 #
