--- a/staging/demo/n76e003/.config
+++ b/staging/demo/n76e003/.config
@@ -12,6 +12,7 @@ CONFIG_8051=y
 # CONFIG_RISCV is not set
 # CONFIG_PTHREAD is not set
 # CONFIG_WIN32 is not set
+CONFIG_CC="sdcc"
 
 #
 # 8051 architecture
