--- a/scripts/Makefile.sdcc
+++ b/scripts/Makefile.sdcc
@@ -79,6 +79,7 @@ endif
 
 # asm deps
 a_deps-y += include/generated/picoRTOS_device.S
+a_deps-y += include/generated/autoconf.S
 
 # ===========================================================================
 
@@ -94,10 +95,13 @@ __sdcc: $(target) $(always)
 
 quiet_cmd_pl_rel_h = PL $(quiet_modtag)  $@
 cmd_pl_rel_h = $(PERL) $(srctree)/scripts/hdr2asm.pl \
-	       $(filter %/picoRTOS_device.h,$(call cmd_dep_h_c,$(c_src-y))) > $@
+	       $(filter %/$(2),$(call cmd_dep_h_c,$(c_src-y))) > $@
 
 include/generated/picoRTOS_device.S: FORCE
-	$(call if_changed,pl_rel_h)
+	$(call if_changed,pl_rel_h,picoRTOS_device.h)
+
+include/generated/autoconf.S: FORCE
+	$(call if_changed,pl_rel_h,generated/autoconf.h)
 
 # Prepare object files (.rel)
 # ---------------------------------------------------------------------------
