--- a/arch/pthread/Makefile
+++ b/arch/pthread/Makefile
@@ -4,3 +4,6 @@
 arch-pthread := $(srctree)/arch/pthread
 
 c_src-$(CONFIG_PTHREAD_LINUX) += $(arch-pthread)/linux/picoRTOS_port.c
+
+# static analysis improvements
+cppcheckflags-$(CONFIG_PTHREAD_LINUX) += --platform=native
