--- a/arch/win32/Makefile
+++ b/arch/win32/Makefile
@@ -4,3 +4,6 @@
 arch-win32 := $(srctree)/arch/win32
 
 c_src-$(CONFIG_WIN32) += $(arch-win32)/picoRTOS_port.c
+
+# static analysis improvements
+cppcheckflags-$(CONFIG_WIN32) += --platform=win32A
