Add support for Attiny414
From a cursory glance this is all the changes I could see as required.

Will likely test within the next few weeks.

--- a/arch/avr/Kconfig
+++ b/arch/avr/Kconfig
@@ -26,6 +26,10 @@ config MACH_ATTINY88
        bool "Atmel ATTiny88"
        select ATTINY
        
+config MACH_ATTINY414
+       bool "Atmel ATTiny414"
+       select ATTINY
+       
 config MACH_ATTINY817
        bool "Atmel ATTiny817"
        select ATTINY
