--- a/demo/amigaball-lcd/configs/arduino-mega2560_defconfig
+++ b/demo/amigaball-lcd/configs/arduino-mega2560_defconfig
@@ -21,6 +21,7 @@ CONFIG_MACH_ATMEGA2560=y
 # CONFIG_MACH_ATMEGA328P is not set
 # CONFIG_MACH_ATMEGA32U4 is not set
 # CONFIG_MACH_ATTINY88 is not set
+# CONFIG_MACH_ATTINY414 is not set
 # CONFIG_MACH_ATTINY817 is not set
 # CONFIG_MACH_ATTINY1607 is not set
 # CONFIG_MACH_LGT8FX8P is not set
