--- a/test/footprint/configs/attiny_defconfig
+++ b/test/footprint/configs/attiny_defconfig
@@ -15,6 +15,7 @@ CONFIG_AVR=y
 # CONFIG_ATMEGA is not set
 CONFIG_ATTINY=y
 CONFIG_MACH_ATTINY817=y
+CONFIG_MACH_ATTINY414=y
 # CONFIG_MACH_ATTINY1607 is not set
 
 #
