gpio: support for stm8 (staging)

--- a/staging/drivers/gpio/Makefile
+++ b/staging/drivers/gpio/Makefile
@@ -8,3 +8,4 @@ c_src-$(CONFIG_GPIO_N76E003) += $(staging-drivers-gpio)/gpio-n76e003.c
 c_src-$(CONFIG_GPIO_STM32F10XXX) += $(staging-drivers-gpio)/gpio-stm32f10xxx.c
 c_src-$(CONFIG_GPIO_WCH_CH32X) += $(staging-drivers-gpio)/gpio-wch_ch32x.c
 c_src-$(CONFIG_GPIO_MC9S08PTXX) += $(staging-drivers-gpio)/gpio-mc9s08ptxx.c
+c_src-$(CONFIG_GPIO_STM8) += $(staging-drivers-gpio)/gpio-stm8.c
