--- a/staging/drivers/gpio/Kconfig
+++ b/staging/drivers/gpio/Kconfig
@@ -20,4 +20,8 @@ config GPIO_MC9S08PTXX
        depends on HCS08
        bool "NXP MC9S08PTxx series GPIOs"
 
+config GPIO_STM8
+       depends on STM8
+       bool "STMicro STM8 series GPIOs"
+
 endmenu
