--- a/staging/drivers/clock/Kconfig
+++ b/staging/drivers/clock/Kconfig
@@ -28,4 +28,8 @@ config CLOCK_MC9S08PTXX
        depends on HCS08
        bool "NXP MC9S08PTxx series clock"
 
+config CLOCK_STM8
+       depends on STM8
+       bool "STMicro STM8 series clock"
+
 endmenu
