demos: fixed all .config files

--- a/demo/arduino-uno_r4/.config
+++ b/demo/arduino-uno_r4/.config
@@ -10,6 +10,7 @@ CONFIG_ARM=y
 # CONFIG_MIPS is not set
 # CONFIG_POWERPC is not set
 # CONFIG_RISCV is not set
+# CONFIG_STM8 is not set
 # CONFIG_PTHREAD is not set
 # CONFIG_WIN32 is not set
 CONFIG_CC="gcc"
@@ -29,6 +30,7 @@ CONFIG_FPV4_SP_D16=y
 # CONFIG_FPV5_SP_D16 is not set
 CONFIG_L1_CACHE_LINESIZE=4
 # CONFIG_CACHE_MAINTENANCE is not set
+CONFIG_STUB_NEWLIB_4_4_0=y
 
 #
 # Scheduler options
