--- a/demo/attiny817-xplained/.config
+++ b/demo/attiny817-xplained/.config
@@ -10,6 +10,7 @@ CONFIG_AVR=y
 # CONFIG_MIPS is not set
 # CONFIG_POWERPC is not set
 # CONFIG_RISCV is not set
+# CONFIG_STM8 is not set
 # CONFIG_PTHREAD is not set
 # CONFIG_WIN32 is not set
 CONFIG_CC="gcc"
@@ -22,6 +23,7 @@ CONFIG_ATTINY=y
 # CONFIG_MACH_ATMEGA328P is not set
 # CONFIG_MACH_ATMEGA32U4 is not set
 # CONFIG_MACH_ATTINY88 is not set
+# CONFIG_MACH_ATTINY414 is not set
 CONFIG_MACH_ATTINY817=y
 # CONFIG_MACH_ATTINY1607 is not set
 # CONFIG_MACH_LGT8FX8P is not set
