--- a/staging/demo/mh-tiny/.config
+++ b/staging/demo/mh-tiny/.config
@@ -6,11 +6,15 @@
 # CONFIG_ARM is not set
 CONFIG_AVR=y
 # CONFIG_C2000 is not set
+# CONFIG_HCS08 is not set
 # CONFIG_MIPS is not set
 # CONFIG_POWERPC is not set
 # CONFIG_RISCV is not set
+# CONFIG_STM8 is not set
 # CONFIG_PTHREAD is not set
 # CONFIG_WIN32 is not set
+CONFIG_CC="gcc"
+CONFIG_SYSCLK_HZ=16000000
 
 #
 # AVR8 architecture
@@ -20,10 +24,10 @@ CONFIG_ATTINY=y
 # CONFIG_MACH_ATMEGA328P is not set
 # CONFIG_MACH_ATMEGA32U4 is not set
 CONFIG_MACH_ATTINY88=y
+# CONFIG_MACH_ATTINY414 is not set
 # CONFIG_MACH_ATTINY817 is not set
 # CONFIG_MACH_ATTINY1607 is not set
 # CONFIG_MACH_LGT8FX8P is not set
-CONFIG_SYSCLK_HZ=16000000
 
 #
 # Scheduler options
@@ -205,4 +209,8 @@ CONFIG_STAGING=y
 
 #
 # UART drivers
+#
+
+#
+# Watchdog drivers
 #
