--- a/staging/demo/stm32f401rct6/.config
+++ b/staging/demo/stm32f401rct6/.config
@@ -6,11 +6,14 @@
 CONFIG_ARM=y
 # CONFIG_AVR is not set
 # CONFIG_C2000 is not set
+# CONFIG_HCS08 is not set
 # CONFIG_MIPS is not set
 # CONFIG_POWERPC is not set
 # CONFIG_RISCV is not set
+# CONFIG_STM8 is not set
 # CONFIG_PTHREAD is not set
 # CONFIG_WIN32 is not set
+CONFIG_CC="gcc"
 
 #
 # ARM architecture
@@ -22,10 +25,12 @@ CONFIG_ARMV7EM=y
 # CONFIG_MACH_STM32H7XX is not set
 # CONFIG_MACH_RENESAS_RA4 is not set
 CONFIG_MACH_STM32F401X=y
+# CONFIG_MACH_STM32L4X is not set
 CONFIG_FPV4_SP_D16=y
 # CONFIG_FPV5_SP_D16 is not set
 CONFIG_L1_CACHE_LINESIZE=16
 # CONFIG_CACHE_MAINTENANCE is not set
+CONFIG_STUB_NEWLIB_4_4_0=y
 
 #
 # Scheduler options
@@ -195,6 +200,7 @@ CONFIG_STAGING=y
 #
 # CONFIG_CLOCK_STM32F10XXX is not set
 CONFIG_CLOCK_STM32F401X=y
+# CONFIG_CLOCK_STM32L4X is not set
 
 #
 # DMA drivers
@@ -244,3 +250,8 @@ CONFIG_CLOCK_STM32F401X=y
 #
 # UART drivers
 #
+
+#
+# Watchdog drivers
+#
+# CONFIG_WD_RENESAS_RA4_WDT is not set
