--- a/demo/win32/.config
+++ b/demo/win32/.config
@@ -10,6 +10,7 @@
 # CONFIG_MIPS is not set
 # CONFIG_POWERPC is not set
 # CONFIG_RISCV is not set
+# CONFIG_STM8 is not set
 # CONFIG_PTHREAD is not set
 CONFIG_WIN32=y
 CONFIG_CC="gcc"
