--- a/staging/demo/arduino-nano-v3-clone/.config
+++ b/staging/demo/arduino-nano-v3-clone/.config
@@ -6,11 +6,14 @@
 # CONFIG_ARM is not set
 CONFIG_AVR=y
 # CONFIG_C2000 is not set
+# CONFIG_HCS08 is not set
 # CONFIG_MIPS is not set
 # CONFIG_POWERPC is not set
 # CONFIG_RISCV is not set
+# CONFIG_STM8 is not set
 # CONFIG_PTHREAD is not set
 # CONFIG_WIN32 is not set
+CONFIG_CC="gcc"
 
 #
 # AVR8 architecture
@@ -206,4 +209,8 @@ CONFIG_CLOCK_LGT8FX8P=y
 
 #
 # UART drivers
+#
+
+#
+# Watchdog drivers
 #
