--- a/staging/demo/ch32v003f4p6-r0-1v1/.config
+++ b/staging/demo/ch32v003f4p6-r0-1v1/.config
@@ -6,11 +6,14 @@
 # CONFIG_ARM is not set
 # CONFIG_AVR is not set
 # CONFIG_C2000 is not set
+# CONFIG_HCS08 is not set
 # CONFIG_MIPS is not set
 # CONFIG_POWERPC is not set
 CONFIG_RISCV=y
+# CONFIG_STM8 is not set
 # CONFIG_PTHREAD is not set
 # CONFIG_WIN32 is not set
+CONFIG_CC="gcc"
 
 #
 # RISC-V architecture
@@ -192,4 +195,8 @@ CONFIG_MUX_WCH_CH32X=y
 
 #
 # UART drivers
+#
+
+#
+# Watchdog drivers
 #
