--- a/staging/demo/s08pt60-evk/.config
+++ b/staging/demo/s08pt60-evk/.config
@@ -10,6 +10,7 @@ CONFIG_HCS08=y
 # CONFIG_MIPS is not set
 # CONFIG_POWERPC is not set
 # CONFIG_RISCV is not set
+# CONFIG_STM8 is not set
 # CONFIG_PTHREAD is not set
 # CONFIG_WIN32 is not set
 CONFIG_CC="sdcc"
