--- a/staging/demo/stm32f103xx/.config
+++ b/staging/demo/stm32f103xx/.config
@@ -6,11 +6,14 @@
 CONFIG_ARM=y
 # CONFIG_AVR is not set
 # CONFIG_C2000 is not set
+# CONFIG_HCS08 is not set
 # CONFIG_MIPS is not set
 # CONFIG_POWERPC is not set
 # CONFIG_RISCV is not set
+# CONFIG_STM8 is not set
 # CONFIG_PTHREAD is not set
 # CONFIG_WIN32 is not set
+CONFIG_CC="gcc"
 
 #
 # ARM architecture
@@ -20,6 +23,7 @@ CONFIG_ARMV7M=y
 # CONFIG_ARMV7EM is not set
 # CONFIG_MACH_ATSAM3X8E is not set
 CONFIG_MACH_STM32F10XXX=y
+CONFIG_STUB_NEWLIB_4_4_0=y
 
 #
 # Scheduler options
@@ -188,6 +192,8 @@ CONFIG_STAGING=y
 # Clock drivers
 #
 CONFIG_CLOCK_STM32F10XXX=y
+# CONFIG_CLOCK_STM32F401X is not set
+# CONFIG_CLOCK_STM32L4X is not set
 
 #
 # DMA drivers
@@ -237,3 +243,8 @@ CONFIG_MUX_STM32F10XXX=y
 #
 # UART drivers
 #
+
+#
+# Watchdog drivers
+#
+# CONFIG_WD_RENESAS_RA4_WDT is not set
