--- a/demo/amigaball-lcd/configs/adafruit-itsybitsy-m4_defconfig
+++ b/demo/amigaball-lcd/configs/adafruit-itsybitsy-m4_defconfig
@@ -2,14 +2,18 @@
 # Automatically generated make config: don't edit
 # OpenPicoRTOS v1.9.x Configuration
 #
+# CONFIG_8051 is not set
 CONFIG_ARM=y
 # CONFIG_AVR is not set
 # CONFIG_C2000 is not set
+# CONFIG_HCS08 is not set
 # CONFIG_MIPS is not set
-# CONFIG_PPC is not set
+# CONFIG_POWERPC is not set
 # CONFIG_RISCV is not set
+# CONFIG_STM8 is not set
 # CONFIG_PTHREAD is not set
 # CONFIG_WIN32 is not set
+CONFIG_CC="gcc"
 
 #
 # ARM architecture
@@ -19,10 +23,14 @@ CONFIG_ARM=y
 CONFIG_ARMV7EM=y
 CONFIG_MACH_ATSAME5X=y
 # CONFIG_MACH_STM32H7XX is not set
+# CONFIG_MACH_RENESAS_RA4 is not set
+# CONFIG_MACH_STM32F401X is not set
+# CONFIG_MACH_STM32L4X is not set
 CONFIG_FPV4_SP_D16=y
 # CONFIG_FPV5_SP_D16 is not set
 CONFIG_L1_CACHE_LINESIZE=16
-# CONFIG_CACHE_MAINTENANCE is not set
+CONFIG_CACHE_MAINTENANCE=y
+CONFIG_STUB_NEWLIB_4_4_0=y
 
 #
 # Scheduler options
@@ -33,7 +41,6 @@ CONFIG_SINGLE_CORE=y
 #
 # General setup
 #
-CONFIG_SYSCLK_HZ=120000000
 CONFIG_TICK_HZ=10000
 CONFIG_TASK_COUNT=3
 CONFIG_DEFAULT_STACK_COUNT=256
@@ -73,11 +80,14 @@ CONFIG_EXTRA_LDFLAGS=""
 # CONFIG_ADC_RP2040 is not set
 # CONFIG_ADC_SAM3X is not set
 # CONFIG_ADC_SAME5X is not set
+# CONFIG_ADC_RENESAS_RA4 is not set
 
 #
 # CAN drivers
 #
 # CONFIG_CAN_TI_DCAN is not set
+# CONFIG_CAN_ATSAM3X is not set
+# CONFIG_CAN_NXP_FLEXCAN is not set
 
 #
 # Clock drivers
@@ -86,6 +96,7 @@ CONFIG_EXTRA_LDFLAGS=""
 # CONFIG_CLOCK_ATSAM3X is not set
 CONFIG_CLOCK_ATSAME5X=y
 # CONFIG_CLOCK_STM32H7XX is not set
+# CONFIG_CLOCK_RENESAS_RA4 is not set
 
 #
 # DMA drivers
@@ -110,6 +121,7 @@ CONFIG_DMA_ATSAME5X=y
 # CONFIG_GPIO_ATSAM3X is not set
 CONFIG_GPIO_ATSAME5X=y
 # CONFIG_GPIO_STM32H7XX is not set
+# CONFIG_GPIO_RENESAS_RA4 is not set
 
 #
 # Misc. drivers
@@ -124,6 +136,7 @@ CONFIG_GPIO_ATSAME5X=y
 # CONFIG_MUX_ATSAM3X is not set
 CONFIG_MUX_ATSAME5X=y
 # CONFIG_MUX_STM32H7XX is not set
+# CONFIG_MUX_RENESAS_RA4 is not set
 
 #
 # PWM drivers
@@ -133,6 +146,7 @@ CONFIG_MUX_ATSAME5X=y
 # CONFIG_PWM_ATSAM3X_TC is not set
 # CONFIG_PWM_ATSAME5X is not set
 # CONFIG_PWM_STM32H7XX is not set
+# CONFIG_PWM_RENESAS_RA4_GPT is not set
 
 #
 # SPI drivers
@@ -141,6 +155,7 @@ CONFIG_MUX_ATSAME5X=y
 CONFIG_SPI_ATMEL_SERCOM=y
 # CONFIG_SPI_ATSAM3X is not set
 # CONFIG_SPI_STM32H7XX is not set
+# CONFIG_SPI_RENESAS_RA4 is not set
 
 #
 # TWI/I2C drivers
@@ -156,6 +171,7 @@ CONFIG_SPI_ATMEL_SERCOM=y
 # CONFIG_UART_ATMEL_SERCOM is not set
 # CONFIG_UART_ATSAM3X is not set
 # CONFIG_UART_STM32H7XX is not set
+# CONFIG_UART_RENESAS_RA4_SCI is not set
 
 #
 # Watchdog drivers
