can: NXP flexcan driver rx bugfix

--- a/demo/attiny1607-cnano/.config
+++ b/demo/attiny1607-cnano/.config
@@ -124,6 +124,11 @@ CONFIG_MUX_TINYAVR=y
 CONFIG_PWM_TINYAVR=y
 
 #
+# RNG drivers
+#
+# CONFIG_RNG_XORSHIFT32 is not set
+
+#
 # SPI drivers
 #
 # CONFIG_SPI_AVR is not set
