rng: moved rng-xorshift32 to non-staging directory

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -11,6 +11,7 @@ source drivers/gpio/Kconfig
 source drivers/misc/Kconfig
 source drivers/mux/Kconfig
 source drivers/pwm/Kconfig
+source drivers/rng/Kconfig
 source drivers/spi/Kconfig
 source drivers/twi/Kconfig
 source drivers/uart/Kconfig
