--- a/staging/drivers/rng/Makefile
+++ b/staging/drivers/rng/Makefile
@@ -3,4 +3,4 @@
 #
 staging-drivers-rng := $(srctree)/staging/drivers/rng
 
-c_src-$(CONFIG_RNG_XORSHIFT32) +=  $(staging-drivers-rng)/rng-xorshift32.c
+# c_src-$(CONFIG_RNG_XORSHIFT32) +=  $(staging-drivers-rng)/rng-xorshift32.c
