updated all demo configs

--- a/demo/arduino-uno_r4/.config
+++ b/demo/arduino-uno_r4/.config
@@ -149,6 +149,11 @@ CONFIG_MUX_RENESAS_RA4=y
 CONFIG_PWM_RENESAS_RA4_GPT=y
 
 #
+# RNG drivers
+#
+# CONFIG_RNG_XORSHIFT32 is not set
+
+#
 # SPI drivers
 #
 # CONFIG_SPI_ARM_PL022 is not set
@@ -235,6 +240,10 @@ CONFIG_STAGING=y
 
 #
 # PWM drivers
+#
+
+#
+# RNG drivers
 #
 
 #
