--- a/staging/demo/arduino-nano-v3-clone/.config
+++ b/staging/demo/arduino-nano-v3-clone/.config
@@ -124,6 +124,11 @@ CONFIG_PWM_AVR=y
 # CONFIG_PWM_TINYAVR is not set
 
 #
+# RNG drivers
+#
+# CONFIG_RNG_XORSHIFT32 is not set
+
+#
 # SPI drivers
 #
 CONFIG_SPI_AVR=y
@@ -197,6 +202,10 @@ CONFIG_CLOCK_LGT8FX8P=y
 
 #
 # PWM drivers
+#
+
+#
+# RNG drivers
 #
 
 #
