--- a/staging/demo/ch32v003f4p6-r0-1v1/.config
+++ b/staging/demo/ch32v003f4p6-r0-1v1/.config
@@ -112,6 +112,11 @@ CONFIG_EXTRA_LDFLAGS=""
 # CONFIG_PWM_GD32VF103 is not set
 
 #
+# RNG drivers
+#
+# CONFIG_RNG_XORSHIFT32 is not set
+
+#
 # SPI drivers
 #
 # CONFIG_SPI_GD32VF103 is not set
@@ -182,6 +187,10 @@ CONFIG_MUX_WCH_CH32X=y
 
 #
 # PWM drivers
+#
+
+#
+# RNG drivers
 #
 
 #
