--- a/staging/demo/devebox-stc-c51/.config
+++ b/staging/demo/devebox-stc-c51/.config
@@ -110,6 +110,11 @@ CONFIG_COND=y
 #
 
 #
+# RNG drivers
+#
+# CONFIG_RNG_XORSHIFT32 is not set
+
+#
 # SPI drivers
 #
 
@@ -177,6 +182,10 @@ CONFIG_MUX_8051=y
 
 #
 # PWM drivers
+#
+
+#
+# RNG drivers
 #
 
 #
