--- a/staging/demo/ez-usb-fx2/.config
+++ b/staging/demo/ez-usb-fx2/.config
@@ -109,6 +109,11 @@ CONFIG_CLOCK_CY7C6801XA=y
 #
 
 #
+# RNG drivers
+#
+# CONFIG_RNG_XORSHIFT32 is not set
+
+#
 # SPI drivers
 #
 
@@ -176,6 +181,10 @@ CONFIG_STAGING=y
 
 #
 # PWM drivers
+#
+
+#
+# RNG drivers
 #
 
 #
