--- a/staging/demo/s08pt60-evk-noclk/.config
+++ b/staging/demo/s08pt60-evk-noclk/.config
@@ -107,6 +107,11 @@ CONFIG_COND=y
 #
 
 #
+# RNG drivers
+#
+# CONFIG_RNG_XORSHIFT32 is not set
+
+#
 # SPI drivers
 #
 
@@ -175,6 +180,10 @@ CONFIG_MUX_MC9S08PTXX=y
 # PWM drivers
 #
 # CONFIG_PWM_MC9S08PTXX_FTM is not set
+
+#
+# RNG drivers
+#
 
 #
 # SPI drivers
