--- a/staging/demo/stm32f103xx/.config
+++ b/staging/demo/stm32f103xx/.config
@@ -142,6 +142,11 @@ CONFIG_EXTRA_LDFLAGS=""
 # CONFIG_PWM_RENESAS_RA4_GPT is not set
 
 #
+# RNG drivers
+#
+# CONFIG_RNG_XORSHIFT32 is not set
+
+#
 # SPI drivers
 #
 # CONFIG_SPI_ARM_PL022 is not set
@@ -228,6 +233,10 @@ CONFIG_MUX_STM32F10XXX=y
 
 #
 # PWM drivers
+#
+
+#
+# RNG drivers
 #
 
 #
