--- a/staging/demo/yd-stm32l4431rc/.config
+++ b/staging/demo/yd-stm32l4431rc/.config
@@ -149,6 +149,11 @@ CONFIG_MUX_STM32H7XX=y
 # CONFIG_PWM_RENESAS_RA4_GPT is not set
 
 #
+# RNG drivers
+#
+# CONFIG_RNG_XORSHIFT32 is not set
+
+#
 # SPI drivers
 #
 # CONFIG_SPI_ARM_PL022 is not set
@@ -235,6 +240,10 @@ CONFIG_CLOCK_STM32L4X=y
 
 #
 # PWM drivers
+#
+
+#
+# RNG drivers
 #
 
 #
