--- a/demo/arduino-uno/.config
+++ b/demo/arduino-uno/.config
@@ -125,6 +125,11 @@ CONFIG_PWM_AVR=y
 # CONFIG_PWM_TINYAVR is not set
 
 #
+# RNG drivers
+#
+# CONFIG_RNG_XORSHIFT32 is not set
+
+#
 # SPI drivers
 #
 CONFIG_SPI_AVR=y
