--- a/staging/demo/mh-tiny/.config
+++ b/staging/demo/mh-tiny/.config
@@ -125,6 +125,11 @@ CONFIG_MUX_AVR=y
 # CONFIG_PWM_TINYAVR is not set
 
 #
+# RNG drivers
+#
+# CONFIG_RNG_XORSHIFT32 is not set
+
+#
 # SPI drivers
 #
 CONFIG_SPI_AVR=y
@@ -197,6 +202,10 @@ CONFIG_STAGING=y
 
 #
 # PWM drivers
+#
+
+#
+# RNG drivers
 #
 
 #
