--- a/staging/demo/n76e003/.config
+++ b/staging/demo/n76e003/.config
@@ -110,6 +110,11 @@ CONFIG_CLOCK_N76E003=y
 #
 
 #
+# RNG drivers
+#
+# CONFIG_RNG_XORSHIFT32 is not set
+
+#
 # SPI drivers
 #
 
@@ -177,6 +182,10 @@ CONFIG_MUX_N76E003=y
 
 #
 # PWM drivers
+#
+
+#
+# RNG drivers
 #
 
 #
