--- a/staging/demo/stm8s003f3p3/.config
+++ b/staging/demo/stm8s003f3p3/.config
@@ -103,6 +103,11 @@ CONFIG_EXTRA_LDFLAGS=""
 #
 
 #
+# RNG drivers
+#
+# CONFIG_RNG_XORSHIFT32 is not set
+
+#
 # SPI drivers
 #
 
@@ -168,6 +173,10 @@ CONFIG_MUX_STM8=y
 
 #
 # PWM drivers
+#
+
+#
+# RNG drivers
 #
 
 #
